@@ -2,7 +2,7 @@ ROADMAP
 =======
 
 + release 0.4.0
-	+ new putarg operation
+	* new putarg operation
 	+ (generic) support for floating point arithmetics
 	+ register allocator support for FP registers
 	+ conversion of immediates values
