@@ -1,6 +1,7 @@
 Version 0.4.0.0
 ===============
 + macros JIT_FP, JIT_RETREG, JIT_IMMREG have been removed
++ PUSHARG have been replaced along with the argument passing order
 
 Version 0.3.2.0
 ===============
